[package]
name = "medusa"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = "0.18.1"
log = "0.4.29"
ratatui = "0.30.0"
simplelog = "0.12.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

